@@ -302,6 +302,10 @@ Changes since 2.2.4
 124. Various documentation updates/corrections (Agathoklis D.
      Hatzimanikas).
 125. slsh/slsh.c: bumped copyright year.
+126. src/slconfig.h: For non-Unix, HAVE_LSTAT and HAVE_LCHOWN were
+     defined to be 0 instead of undef'd.  Also, removed an unused
+     function from slposdir.c and a shadowed variable from slpath.c
+
 {{{ Previous Versions
 
 Changes since 2.2.3
